--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -134,6 +134,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    android:background="@drawable/ic_shaving"
                     app:layout_constraintRight_toRightOf="parent"
                     android:backgroundTint="@color/colorPrimary"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -203,11 +204,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    android:background="@drawable/ic_s_facial"
                     app:layout_constraintRight_toRightOf="parent"
                     android:backgroundTint="@color/colorPrimary"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
