--- a/app/src/main/res/layout/booking_layout.xml
+++ b/app/src/main/res/layout/booking_layout.xml
@@ -10,8 +10,6 @@
         android:layout_height="match_parent"
         android:paddingBottom="10dp">
 
-
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -144,6 +142,7 @@
             android:textColor="@color/white"
             android:text="Pay"
             android:textSize="16sp"
+            android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="@id/payBackground"
             app:layout_constraintLeft_toLeftOf="@id/payBackground"
             app:layout_constraintRight_toRightOf="@id/payBackground"
