--- a/app/src/main/res/layout/activity_on_going_booking.xml
+++ b/app/src/main/res/layout/activity_on_going_booking.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="#eee"
     android:layout_height="match_parent"
-    tools:context=".ongoingServices.OnGoingBookingActivity">
+    tools:context=".myBooking.OnGoingBookingActivity">
 
     <ImageView
         android:layout_width="wrap_content"
