--- a/app/src/main/res/layout/activity_ongoing.xml
+++ b/app/src/main/res/layout/activity_ongoing.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eee"
-    tools:context=".ongoingServices.OngoingActivity">
+    tools:context=".myBooking.OngoingActivity">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
