--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -82,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="45"
+                    android:text="0"
                     android:textColor="@color/white"
                     android:textSize="48sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -370,7 +370,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:text="Ongoing Services"
+                        android:text="My bookings"
                         android:textColor="#0DD3F1"
 
                         app:layout_constraintBottom_toBottomOf="@id/servicesIcon"
