--- a/app/src/main/res/layout/activity_ongoing.xml
+++ b/app/src/main/res/layout/activity_ongoing.xml
@@ -57,8 +57,24 @@
         app:layout_constraintRight_toRightOf="@id/gR"
         app:layout_constraintTop_toBottomOf="@id/back"
         android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/paybtn"
         android:id="@+id/serviceRecyclerView"/>
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardBackgroundColor="@color/colorPrimary"
+        android:id="@+id/paybtn">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Pay now"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
