--- a/app/src/main/res/layout/booking_layout.xml
+++ b/app/src/main/res/layout/booking_layout.xml
@@ -127,6 +127,7 @@
             android:id="@+id/payBackground"
             android:layout_width="80dp"
             android:layout_height="25dp"
+            android:visibility="gone"
             android:layout_marginTop="8dp"
             android:background="@drawable/curved_view_pending"
             app:layout_constraintLeft_toLeftOf="@id/serviceNameTxt"
@@ -142,6 +143,7 @@
             android:text="Pay"
             android:textSize="16sp"
             android:padding="5dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/payBackground"
             app:layout_constraintLeft_toLeftOf="@id/payBackground"
             app:layout_constraintRight_toRightOf="@id/payBackground"
