--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -36,7 +36,7 @@
         android:orientation="horizontal"
         android:id="@+id/gB"/>
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/gT"
@@ -58,9 +58,9 @@
 
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        app:cardCornerRadius="35dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:cardCornerRadius="30dp"
         app:cardBackgroundColor="#FAFAFA"
         app:layout_constraintLeft_toLeftOf="@id/gL"
         app:layout_constraintRight_toRightOf="@id/gR"
