--- a/app/src/main/res/layout/activity_on_going_booking.xml
+++ b/app/src/main/res/layout/activity_on_going_booking.xml
@@ -30,14 +30,7 @@
         android:fontFamily="@font/roboto_medium"
         android:textColor="#999999"/>
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/loader"/>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gL"
@@ -62,6 +55,24 @@
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/serviceRecyclerView"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/loader"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
+        android:id="@+id/paginationLoader"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
