--- a/app/src/main/res/layout/activity_service_details.xml
+++ b/app/src/main/res/layout/activity_service_details.xml
@@ -64,10 +64,11 @@
        app:layout_constraintLeft_toLeftOf="@id/serviceImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="5dp"
-       android:text="Service description limit must not exceed 120"
+       android:text="No description"
        app:layout_constraintTop_toBottomOf="@id/categoryHolder"
        android:textColor="#999999"
        android:textSize="16sp"
+       android:maxLength="100"
        android:maxLines="3"
        app:layout_constraintBottom_toTopOf="@id/noOfIndividualsTxt"
        android:id="@+id/serviceDescription"/>
