--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,6 +48,7 @@
             app:layout_constraintBottom_toBottomOf="@id/view1"
             android:background="@drawable/search_drawable"
             android:focusableInTouchMode="false"
+            android:foreground="?attr/selectableItemBackground"
             app:layout_constraintVertical_bias="0.4"
             />
         <ImageView
@@ -84,6 +85,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:cardBackgroundColor="#E9FFFE"
             android:id="@+id/haircut"
+            android:foreground="?attr/selectableItemBackground"
             app:cardElevation="5dp"
             app:layout_constraintVertical_bias="0.11">
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -122,7 +124,7 @@
             app:layout_constraintTop_toTopOf="@id/haircut"
             app:cardBackgroundColor="#E9FFFE"
             app:cardElevation="5dp"
-
+            android:foreground="?attr/selectableItemBackground"
             android:id="@+id/shaving"
             app:layout_constraintVertical_bias="0.19">
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -160,6 +162,7 @@
             app:layout_constraintTop_toTopOf="@id/haircut"
             app:cardBackgroundColor="#E9FFFE"
             app:cardElevation="5dp"
+            android:foreground="?attr/selectableItemBackground"
             android:id="@+id/dTan"
             >
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -198,6 +201,7 @@
             app:cardBackgroundColor="#E9FFFE"
             android:id="@+id/facial"
             app:cardElevation="5dp"
+            android:foreground="?attr/selectableItemBackground"
             android:layout_marginTop="50dp"
            >
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -234,6 +238,7 @@
             app:layout_constraintTop_toTopOf="@id/facial"
             app:cardBackgroundColor="#E9FFFE"
             app:cardElevation="5dp"
+            android:foreground="?attr/selectableItemBackground"
             android:id="@+id/straightening"
            >
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -270,6 +275,7 @@
             app:layout_constraintTop_toTopOf="@id/facial"
             app:cardBackgroundColor="#E9FFFE"
             android:id="@+id/pedicure"
+            android:foreground="?attr/selectableItemBackground"
             app:cardElevation="5dp"
             >
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -307,6 +313,7 @@
             app:layout_constraintTop_toBottomOf="@id/facialTxt"
             app:cardBackgroundColor="#E9FFFE"
             app:cardElevation="5dp"
+            android:foreground="?attr/selectableItemBackground"
             android:layout_marginTop="50dp"
             android:id="@+id/brideGroom"
             >
@@ -346,6 +353,7 @@
             app:layout_constraintTop_toTopOf="@id/brideGroom"
             app:cardBackgroundColor="#E9FFFE"
             android:id="@+id/manicure"
+            android:foreground="?attr/selectableItemBackground"
             app:cardElevation="5dp"
             app:layout_constraintVertical_bias="0.15">
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -382,6 +390,7 @@
             app:layout_constraintTop_toTopOf="@id/brideGroom"
             app:cardBackgroundColor="#E9FFFE"
             app:cardElevation="5dp"
+            android:foreground="?attr/selectableItemBackground"
             android:id="@+id/allServices"
             >
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -492,6 +501,8 @@
             app:layout_constraintRight_toRightOf="@id/gR"
             android:layout_marginTop="10dp"
             android:elevation="2dp"
+            android:foreground="?attr/selectableItemBackground"
+
             android:id="@+id/locateStudioView"/>
 
         <TextView
@@ -545,6 +556,7 @@
             app:layout_constraintHorizontal_bias="0.9"
             android:background="@drawable/ic_arrow"
             android:id="@+id/storeLocationImg"
+            android:foreground="?attr/selectableItemBackground"
             android:backgroundTint="@color/colorPrimary"/>
 
         
@@ -583,6 +595,7 @@
                     android:background="@drawable/ic_image"
                     app:layout_constraintVertical_bias="0.35"
                     android:id="@+id/gallery"
+                    android:foreground="?attr/selectableItemBackground"
                     android:backgroundTint="@color/colorPrimary"/>
 
                 <TextView
