--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
         app:layout_constraintBottom_toTopOf="@id/bottomImg"
         app:layout_constraintVertical_bias="0.4"
         app:cardElevation="5dp"
+        android:foreground="?attr/selectableItemBackground"
         android:id="@+id/googleLoginBtn"
         app:cardCornerRadius="5dp">
         <androidx.constraintlayout.widget.ConstraintLayout
