--- a/app/src/main/res/layout/ongoing_service_layout.xml
+++ b/app/src/main/res/layout/ongoing_service_layout.xml
@@ -15,6 +15,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:id="@+id/serviceImg"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@id/serviceNameTxt"
             android:background="@drawable/ic_image_placeholder"
